<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/title_favorites" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item android:title="@string/general">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/ic_faq"
                android:title="@string/faq" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:icon="@drawable/ic_privacy_policy"
                android:title="@string/privacy_policy" />
            <item
                android:id="@+id/nav_app_info"
                android:icon="@drawable/ic_info"
                android:title="@string/app_info" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>