<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@drawable/bg_image"
    android:orientation="horizontal"
    android:theme="@style/ThemeOverlay.AppCompat.Light">

    <ImageView
        android:id="@+id/nav_header_iv_profile_image"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/nav_header_profile_image_description"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nav_header_tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_username"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/nav_header_tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_email"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>
